# Softplayer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  meson.build  vcpkg.json
shaders/: triangle.hlsl
src/: gui_manager.cpp  gui_manager.hpp  main.cpp  main.hpp  model.cpp  model.hpp  renderer.cpp  script_manager.cpp  script_manager.hpp  shader.cpp  shader.hpp  types.hpp  vec3.cpp  vec3.hpp
src/script/: addons.cpp  addons.hpp  globals.cpp  globals.hpp
